--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.NanoFormula" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.NanoFormula" parent="Base.Theme.NanoFormula" />
+
+    <style name="fragment">
+    </style>
+
+    <style name="bottomMenu">
+        <item name="android:background">@color/backgroundColorMenu</item>
+    </style>
 </resources>
