--- a/app/src/main/res/layout/fragment_pilotos.xml
+++ b/app/src/main/res/layout/fragment_pilotos.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".PilotosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pilotosRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="pilotos" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
