--- a/app/src/main/res/layout/linea_piloto_recycler_view.xml
+++ b/app/src/main/res/layout/linea_piloto_recycler_view.xml
@@ -8,20 +8,13 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editTextNumber"
-        android:layout_width="1dp"
-        android:layout_height="28dp"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="number" />
 
-    <ImageView
-        android:id="@+id/imagen"
-        android:layout_width="48dp"
-        android:layout_height="72dp"
-        android:contentDescription="@string/app_name"
-        app:srcCompat="@mipmap/ic_launcher" />
+    <TextView
+        android:id="@+id/posicionPiloto"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/posicion" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -32,17 +25,27 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/titulopeli"
+            android:id="@+id/nombrePiloto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:text="@string/nombrePiloto" />
+
 
         <TextView
-            android:id="@+id/fechaestreno"
+            android:id="@+id/nombreEquipo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:text="@string/nombreEquipo" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/puntosPiloto"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/puntosPiloto" />
 
 </LinearLayout>
