--- a/app/src/main/res/layout/fragment_pilotos.xml
+++ b/app/src/main/res/layout/fragment_pilotos.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PilotosFragment">
+    tools:context=".PilotosFragment"
+    android:layout_marginTop="60dp">
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pilotosRecyclerView"
