--- a/app/src/main/res/layout/fragment_pilotos.xml
+++ b/app/src/main/res/layout/fragment_pilotos.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PilotosFragment"
-    android:layout_marginTop="60dp">
+    android:layout_marginTop="60dp"
+    android:layout_marginBottom="70dp">
 
 
 
