--- a/app/src/main/res/layout/fragment_escuderias.xml
+++ b/app/src/main/res/layout/fragment_escuderias.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConstructoresFragment"
+    tools:context=".EscuderiasFragment"
     android:layout_marginTop="60dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/escuderiasRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="constructores" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
