--- a/app/src/main/res/layout/fragment_carreras.xml
+++ b/app/src/main/res/layout/fragment_carreras.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CarrerasFragment"
-    android:layout_marginTop="60dp">
+    android:layout_marginTop="60dp"
+    android:layout_marginBottom="70dp">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
