--- a/app/src/main/res/layout/fragment_escuderias.xml
+++ b/app/src/main/res/layout/fragment_escuderias.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EscuderiasFragment"
-    android:layout_marginTop="60dp">
+    android:layout_marginTop="60dp"
+    android:layout_marginBottom="70dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/escuderiasRecyclerView"
