--- a/app/src/main/res/layout/scrolling_escuderia.xml
+++ b/app/src/main/res/layout/scrolling_escuderia.xml
@@ -73,7 +73,7 @@
                     android:id="@+id/txTitulos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="-"
                     android:gravity="center"/>
             </LinearLayout>
 
@@ -95,7 +95,7 @@
                     android:id="@+id/txVictorias"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="-"
                     android:gravity="center"/>
             </LinearLayout>
 
@@ -117,7 +117,7 @@
                     android:id="@+id/txPuntos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="-"
                     android:gravity="center"/>
             </LinearLayout>
 
@@ -139,7 +139,7 @@
                     android:id="@+id/txTemporadas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="-"
                     android:gravity="center"/>
             </LinearLayout>
         </LinearLayout>
