09/11/2023 - Carlos - Introducida transicion mientras se cargan los detalles del piloto

--- a/app/src/main/res/layout/activity_piloto_details.xml
+++ b/app/src/main/res/layout/activity_piloto_details.xml
@@ -13,5 +13,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
-    <include layout="@layout/scrolling_piloto" />
+
+
+    <include layout="@layout/scrolling_piloto"
+        android:id="@+id/layoutPiloto"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
