10-11-2023 - David - Terminado diseño detalles circuito

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,13 @@
     <style name="Theme.NanoFormulaDetails" parent="Base.Theme.NanoFormula">
         <item name="colorPrimary">@color/colorUno</item>
     </style>
+
+    <style name="Theme.NanoFormula.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.NanoFormula.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.NanoFormula.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
