--- a/app/src/main/res/layout/linea_carrera_recycler_view.xml
+++ b/app/src/main/res/layout/linea_carrera_recycler_view.xml
@@ -16,14 +16,6 @@
         android:layout_weight="0.3"
         android:text="@string/posicion" />
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/fotoBandera"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:contentDescription="@string/fotoConstructor"
-        android:scaleType="centerCrop"
-        app:srcCompat="@mipmap/ic_launcher" />
-
 
     <LinearLayout
         android:layout_width="0dp"
@@ -33,12 +25,28 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/nombreCarrera"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="26dp"
-            android:text="@string/nombreCarrera"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/fotoBandera"
+                android:layout_width="24dp"
+                android:layout_height="16dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:contentDescription="@string/fotoConstructor"
+                android:scaleType="centerCrop"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/nombreCarrera"
+                android:layout_width="match_parent"
+                android:layout_height="26dp"
+                android:text="@string/nombreCarrera"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        </LinearLayout>
 
 
         <TextView
