--- a/app/src/main/res/layout/scrolling_carrera.xml
+++ b/app/src/main/res/layout/scrolling_carrera.xml
@@ -11,114 +11,134 @@
     android:layout_marginTop="50dp">
 
     <LinearLayout
+        android:id="@+id/layoutPrincipalDetallesCarrera"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center|top"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
-        android:gravity="center|top">
+        tools:layout_editor_absoluteY="1dp">
 
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ftPilotoCircuito"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/fotoCircuito"
-            android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/roundedImageView"
+            android:scaleType="centerInside"
+            app:shapeAppearanceOverlay="@style/Theme.NanoFormula"
             app:srcCompat="@mipmap/ic_launcher" />
 
-        <TextView
-            android:id="@+id/txNombreCarrera"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/nombreCarrera" />
+            android:orientation="horizontal">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/fotoBanderaCarrera"
+                android:layout_width="24dp"
+                android:layout_height="16dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/fotoConstructor"
+                android:scaleType="centerCrop"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/txNombreCarrera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:text="@string/nombreCarrera"
+                android:textColor="@color/white" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txNombreCircuito"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:text="@string/nombreCircuito" />
+            android:text="@string/nombreCircuito"
+            android:textColor="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginRight="40dp"
                 android:layout_marginLeft="20dp"
-                >
+                android:layout_marginRight="40dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txTituloLocalidad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/localidadCircuito"
-                    android:textColor="@color/white" />
+                    android:text="@string/localidadCircuito" />
 
                 <TextView
                     android:id="@+id/txLocalidad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginRight="60dp">
+                android:layout_marginRight="60dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txTituloFecha"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/fecha_carrera"
-                    android:textColor="@color/white" />
+                    android:text="@string/fecha_carrera" />
 
                 <TextView
                     android:id="@+id/txFecha"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginRight="20dp">
+                android:layout_marginRight="20dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txTituloHora"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/hora_carrera"
-                    android:textColor="@color/white" />
+                    android:text="@string/hora_carrera" />
 
                 <TextView
                     android:id="@+id/txHora"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
 
@@ -134,10 +154,12 @@
             android:textColor="@color/white" />
 
         <LinearLayout
+            android:id="@+id/layoutGanador"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center|top"
             android:orientation="vertical"
+            android:visibility="visible"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="1dp">
 
@@ -166,12 +188,14 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@color/white" />
 
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutDatosGandor"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -188,15 +212,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/polePiloto"
-                    android:textAlignment="center"
-                    android:textColor="@color/white" />
+                    android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/txTemporadasPiloto"
+                    android:id="@+id/txPilotoPole"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="-" />
+                    android:text="-"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -210,15 +234,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/vueltaRapidaCarrera"
-                    android:textAlignment="center"
-                    android:textColor="@color/white" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/txVueltaRapidaPiloto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="-" />
+                    android:text="-"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -231,15 +255,15 @@
                     android:id="@+id/txTituloVueltasCarrera"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/vueltasCarrera"
-                    android:textColor="@color/white" />
+                    android:text="@string/vueltasCarrera" />
 
                 <TextView
-                    android:id="@+id/txPuntosPilotoTotal"
+                    android:id="@+id/txVueltasCarrera"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="-" />
+                    android:text="-"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -253,15 +277,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/tiempoGanador"
-                    android:textAlignment="center"
-                    android:textColor="@color/white" />
+                    android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/txMejorPosicionPiloto"
+                    android:id="@+id/txTiempoPiloto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="-" />
+                    android:text="-"
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
 
@@ -278,42 +302,49 @@
             android:textColor="@color/white" />
 
         <TableLayout
+            android:id="@+id/tableResultados"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TableRow
+                android:id="@+id/tituloTabla"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center">
 
                 <TextView
                     android:id="@+id/txPosCarrera"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/posCarrera" />
 
                 <TextView
                     android:id="@+id/txNombrePiloto"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/nombrePilotoCarrera" />
 
                 <TextView
                     android:id="@+id/txNombreEscuderiaCarrera"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/nombreEscuderiaCarrera" />
 
                 <TextView
                     android:id="@+id/txPuntosCarrera"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/puntosCarreraPiloto" />
 
                 <TextView
                     android:id="@+id/txTiempoPilotoCarrera"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/tiempoGanador" />
             </TableRow>
         </TableLayout>
