--- a/app/src/main/res/layout/scrolling_escuderia.xml
+++ b/app/src/main/res/layout/scrolling_escuderia.xml
@@ -7,7 +7,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".EscuderiaDetails"
     tools:showIn="@layout/activity_escuderia_details"
-    android:background="@drawable/fondo_degradado">
+    android:background="@drawable/fondo_degradado"
+    android:layout_marginTop="50dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,15 +18,6 @@
         tools:layout_editor_absoluteY="1dp"
         android:gravity="center|top"
          >
-
-
-        <TextView
-            android:id="@+id/txNombreEscuderia"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/nombreEscuderia"
-            android:layout_marginBottom="20dp"
-            android:textAlignment="center"/>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ftEscuderia"
